--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                             <i class="fa fa-envelope-o" aria-hidden="true"></i>
                             <a href="mailto:chen@lemontv.me" target="_blank">chen@lemontv.me</a>
                         </div>
+                        <div class="contact col-xs-3">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                            <a href="https://ca.linkedin.com/in/lemontv" target="_blank">Linkedin</a>
+                        </div>
                     </div>
                 </div>
             </div>
