--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <div class="position col-xs-3"> Software engineer </div>
                     </div>
                     <div class="line">
-                        Perform investigation and analysis on the demands and requirements towards system and software development and function objectives, formulate reasonable project execution plans and schedules; Formulate specific technical specifications and select proper development technologies and methodologies to support the follow-up system and software development;
+                        I'm Shiming Chen from China. I have four years web develop (front-end & back-end) experience. In my recent work I use React flux webpack to building single-page application.
                     </div>
                 </div>
                 <div id="contact" class="container">
