--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
                 </div>
                 <div id="contact" class="container">
                     <div class="row">
-                        <div class="contact col-xs-3">
+                        <div class="contact col-xs-6 col-md-3">
                             <i class="fa fa-desktop" aria-hidden="true"></i>
                             <a href="https://lemontv.me" target="_blank">https://lemontv.me</a>
                         </div>
-                        <div class="contact col-xs-3">
+                        <div class="contact col-xs-6 col-md-3">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                             <a href="tel:4389270930" target="_blank">(438)-927-0930</a>
                         </div>
-                        <div class="contact col-xs-3">
+                        <div class="contact col-xs-6 col-md-3">
                             <i class="fa fa-envelope-o" aria-hidden="true"></i>
                             <a href="mailto:chen@lemontv.me" target="_blank">chen@lemontv.me</a>
                         </div>
-                        <div class="contact col-xs-3">
+                        <div class="contact col-xs-6 col-md-3">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
                             <a href="https://ca.linkedin.com/in/lemontv" target="_blank">Linkedin</a>
                         </div>
@@ -45,7 +45,7 @@
             </div>
             <div id="content" class="container">
                 <div class="row">
-                    <div id="content-left" class="col-xs-6">
+                    <div id="content-left" class="col-xs-12 col-md-6">
                         <div class="block" v-for="type in types">
                             <div class="title"> {{type.title}} </div>
                             <div class="list">
@@ -68,7 +68,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="content-right" class="col-xs-6">
+                    <div id="content-right" class="col-xs-12 col-md-6">
                         <div id="skill">
                             <div class="block">
                                 <div class="title"> SKILL </div>
