fix mistake url

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                         <a href="http://www.seqonly.com/">seqonly - sequencing online shop</a>
                                     </div>
                                     <div class="project row">
-                                        <a href="http://www.microbetrack.org/">microbetrack - a service for whole-genome sequence-based microbial identification </a>
+                                        <a href="http://www.microbetrakr.org/">microbetrakr - a service for whole-genome sequence-based microbial identification </a>
                                     </div>
                                     <div class="project row">
                                         <a href="http://www.zetabio.com/">zetabio website</a>
