add response design

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1" />
         <title>Simon's resume</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -9,50 +10,50 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <div id="wrap" class="container-full">
+        <div id="wrap">
             <div id="header">
                 <div id="photo">
                 </div>
                 <div id="summary">
                     <div class="row">
-                        <div class="name col-xs-3"> Shiming Chen </div>
-                        <div class="position col-xs-6"> Software engineer </div>
+                        <div class="name col-xs-12 col-md-6"> Shiming Chen </div>
+                        <div class="position col-xs-12 col-md-6"> Software engineer </div>
                     </div>
                     <div class="line">
                         I'm Shiming Chen from China. I have four years web develop (front-end & back-end) experience. In my recent work I use React flux webpack to building single-page application.
                     </div>
                 </div>
-                <div id="contact" class="container">
+                <div id="contact" class="container-fluid">
                     <div class="row">
-                        <div class="contact col-xs-6 col-md-3">
+                        <div class="contact col-xs-12 col-md-3">
                             <i class="fa fa-desktop" aria-hidden="true"></i>
                             <a href="https://lemontv.me" target="_blank">https://lemontv.me</a>
                         </div>
-                        <div class="contact col-xs-6 col-md-3">
+                        <div class="contact col-xs-12 col-md-3">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                             <a href="tel:4389270930" target="_blank">(438)-927-0930</a>
                         </div>
-                        <div class="contact col-xs-6 col-md-3">
+                        <div class="contact col-xs-12 col-md-3">
                             <i class="fa fa-envelope-o" aria-hidden="true"></i>
                             <a href="mailto:chen@lemontv.me" target="_blank">chen@lemontv.me</a>
                         </div>
-                        <div class="contact col-xs-6 col-md-3">
+                        <div class="contact col-xs-12 col-md-3">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
                             <a href="https://ca.linkedin.com/in/lemontv" target="_blank">Linkedin</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div id="content" class="container">
+            <div id="content" class="container-fluid">
                 <div class="row">
                     <div id="content-left" class="col-xs-12 col-md-6">
                         <div class="block" v-for="type in types">
                             <div class="title"> {{type.title}} </div>
                             <div class="list">
                                 <div class="item" v-for="item in type.items">
-                                    <div class="header">
-                                        <div class="date">{{item.start}} - {{item.end}}</div>
-                                        <div class="name"><a href="{{item.url}}" target="_blank">{{item.name}}</a></div>
+                                    <div class="header row">
+                                        <div class="date col-xs-4">{{item.start}} - {{item.end}}</div>
+                                        <div class="name col-xs-8"><a href="{{item.url}}" target="_blank">{{item.name}}</a></div>
                                     </div>
                                     <div class="detail">
                                         <div v-if="item.multiple">
@@ -72,12 +73,12 @@
                         <div id="skill">
                             <div class="block">
                                 <div class="title"> SKILL </div>
-                                <div class="list container-full">
+                                <div class="list container-fluid">
                                     <div class="skill row" v-for="skill in skills">
-                                        <div class="name col-xs-2">
+                                        <div class="name col-xs-4 col-md-2">
                                             {{skill.name}}
                                         </div>
-                                        <div class="level col-xs-10">
+                                        <div class="level col-xs-8 col-md-10">
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" v-bind:style="{ width: skill.level + '%'}" >
                                                 </div>
@@ -90,7 +91,7 @@
                         <div id="interest">
                             <div class="block">
                                 <div class="title"> INTEREST </div>
-                                <div class="list container-full">
+                                <div class="list container-fluid">
                                     <div class="row">
                                         <div class="interest col-xs-2">
                                             <i class="fa fa-book" aria-hidden="true"></i>
@@ -109,22 +110,22 @@
                             </div>
                         </div>
                         <div id="project">
-                            <div class="block">
+                            <div class="block container-fluid">
                                 <div class="title"> PROJECT </div>
-                                <div class="list container-full">
-                                    <div class="project row">
+                                <div class="list row">
+                                    <div class="project col-xs-12">
                                         <a href="http://www.fraudynamics.cn/">fraudynamics - online ant-fraud platform</a>
                                     </div>
-                                    <div class="project row">
+                                    <div class="project col-xs-12">
                                         fraudynamics javascript SDK - device fingerprint javascript SDK
                                     </div>
-                                    <div class="project row">
+                                    <div class="project col-xs-12">
                                         <a href="http://www.seqonly.com/">seqonly - sequencing online shop</a>
                                     </div>
-                                    <div class="project row">
+                                    <div class="project col-xs-12">
                                         <a href="http://www.microbetrakr.org/">microbetrakr - a service for whole-genome sequence-based microbial identification </a>
                                     </div>
-                                    <div class="project row">
+                                    <div class="project col-xs-12">
                                         <a href="http://www.zetabio.com/">zetabio website</a>
                                     </div>
                                 </div>
