--- a/index.html
+++ b/index.html
@@ -88,6 +88,30 @@
                                 </div>
                             </div>
                         </div>
+                        <div id="project">
+                            <div class="block">
+                                <div class="title"> PROJECT </div>
+                                <div class="list container-fluid">
+                                    <div class="row">
+                                        <div class="project col-xs-12">
+                                            <a href="http://www.fraudynamics.cn/">fraudynamics - online ant-fraud platform</a>
+                                        </div>
+                                        <div class="project col-xs-12">
+                                            fraudynamics javascript SDK - device fingerprint javascript SDK
+                                        </div>
+                                        <div class="project col-xs-12">
+                                            <a href="http://www.seqonly.com/">seqonly - sequencing online shop</a>
+                                        </div>
+                                        <div class="project col-xs-12">
+                                            <a href="http://www.microbetrakr.org/">microbetrakr - a service for whole-genome sequence-based microbial identification </a>
+                                        </div>
+                                        <div class="project col-xs-12">
+                                            <a href="http://www.zetabio.com/">zetabio website</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div id="interest">
                             <div class="block">
                                 <div class="title"> INTEREST </div>
@@ -109,24 +133,17 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="project">
-                            <div class="block container-fluid">
-                                <div class="title"> PROJECT </div>
-                                <div class="list row">
-                                    <div class="project col-xs-12">
-                                        <a href="http://www.fraudynamics.cn/">fraudynamics - online ant-fraud platform</a>
-                                    </div>
-                                    <div class="project col-xs-12">
-                                        fraudynamics javascript SDK - device fingerprint javascript SDK
-                                    </div>
-                                    <div class="project col-xs-12">
-                                        <a href="http://www.seqonly.com/">seqonly - sequencing online shop</a>
-                                    </div>
-                                    <div class="project col-xs-12">
-                                        <a href="http://www.microbetrakr.org/">microbetrakr - a service for whole-genome sequence-based microbial identification </a>
-                                    </div>
-                                    <div class="project col-xs-12">
-                                        <a href="http://www.zetabio.com/">zetabio website</a>
+                        <div id="address">
+                            <div class="block">
+                                <div class="title"> Address </div>
+                                <div class="container-fluid">
+                                    <div class="row">
+                                        <div class="col-xs-12">
+                                            1444 Rue Mackay, Montréal, QC, Canada
+                                        </div>
+                                        <div class="col-xs-12">
+                                            <iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=1444%20Rue%20Mackay%2C%20Montr%C3%A9al%2C%20QC%2C%20Canada&key=AIzaSyC2xnw2I6CkSHdPI0WubX2X0a91DRqGc6c" allowfullscreen></iframe>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -145,9 +162,7 @@
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
                     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
             })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-            ga('create', 'UA-45328192-4', 'auto');
-            ga('send', 'test');
-            ga('set', 'userId', 'lemontv');
+            ga('send', 'pageview');
         </script>
     </body>
 </html>
