--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                             1444 Rue Mackay, Montréal, QC, Canada
                                         </div>
                                         <div class="col-xs-12">
-                                            <iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=1444%20Rue%20Mackay%2C%20Montr%C3%A9al%2C%20QC%2C%20Canada&key=AIzaSyC2xnw2I6CkSHdPI0WubX2X0a91DRqGc6c" allowfullscreen></iframe>
+                                            <iframe width="280" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=1444%20Rue%20Mackay%2C%20Montr%C3%A9al%2C%20QC%2C%20Canada&key=AIzaSyC2xnw2I6CkSHdPI0WubX2X0a91DRqGc6c" allowfullscreen></iframe>
                                         </div>
                                     </div>
                                 </div>
